package com.example.demo.dto;

public class SupportoAmministratoreDTO extends UtenteDTO {
    
	public SupportoAmministratoreDTO() {
        super();
        this.setRuolo("SUPPORTO_AMMINISTRATORE");
    }
}
