package com.example.demo.DTO;

public class ClienteDTO extends UtenteDTO {
    
    public ClienteDTO() {
        super();
        this.setRuolo("CLIENTE");
    }
    
}
